Update cart visibility issues plant.css

--- a/styles/plant.css
+++ b/styles/plant.css
@@ -474,7 +474,9 @@ button {
   .nav-links {
     flex-wrap: wrap;
     gap: 10px;
-  }
+  } 
+  .navbar{
+    align-items:right;
 
   .menu-part {
     display: none;
